--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
+    padding: 0px 12%;
     background-color: #1F2937;
 }
 
@@ -11,11 +12,10 @@ body
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 10%;
     background-color: #1F2937;
 }
 
-.navbar_right
+.navbar_left
 {
     color: white;
     font-size: 24px;
@@ -25,6 +25,8 @@ body
 ul
 {
     display: flex; 
+    margin: 0;
+    padding: 0;
     gap: 16px;
     list-style-type: none;
 }
@@ -41,8 +43,6 @@ a
     background-color: white;
     
 }
-
-
 
 
 .footer
