--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
-    padding: 0px 12%;
+    /* padding: 0px 12%; */
     background-color: #1F2937;
 }
 
@@ -13,6 +13,7 @@ body
     align-items: center;
     justify-content: space-between;
     background-color: #1F2937;
+    padding: 0px 12%;
 }
 
 .navbar_left
@@ -52,7 +53,7 @@ p
 .content
 {
     display: flex;
-    padding: 60px 0px;
+    padding: 60px 12%;
     /* background-color: white; */
 }
 
@@ -71,6 +72,42 @@ button
     padding: 6px 20px;     
     
 }
+
+.random
+{
+    padding: 10px 12% 50px 12%;
+    background-color: white;
+}
+
+h2
+{
+    text-align: center;
+}
+
+.container
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.article
+{
+    max-width: 150px;
+    text-align: center;
+}
+
+
+
+
+.article img
+{
+    width: 150px;
+    height: 150px;
+    border-radius: 12px;
+}
+
 
 .footer
 {
