--- a/styles.css
+++ b/styles.css
@@ -126,10 +126,22 @@ cite
 .action
 {
     padding: 0 12%;
+    padding: 30px 0 100px 0;
     background-color: white;
     display: flex;
+    flex-direction: column;
+
 }
 
+.action_container
+{
+    display: flex;
+    border-radius: 20px;
+    margin: 0 12%;
+    min-height: 100px;
+    padding: 0 50px 0 50px;
+    background-color: #3882F6;
+}
 
 .footer
 {
